--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <section id="page1">
     <header>
         <div class="figma-logo">
-            <img class="imgsize" src="../../img/header.png"/>
+            <img class="imgsize" src="./img/figma-land-logo.png"/>
         </div>
 
         <div class="burger mobile">
-            <img src="../../img/three-lines.png"/>
+            <img src="./img/three-lines.png"/>
         </div>
 
         <div class="desktop">
@@ -57,7 +57,7 @@
 
 
         <div class="first-picture">
-            <img class="image1" src="../../img/section1.png"/>
+            <img class="image1" src="./img/figma-mobile-image.png"/>
         </div>
 
         <div class="first-button">
@@ -70,7 +70,7 @@
 
         <div class="first-content">
             <div class="desktop-image">
-                <img class="desktop desktop-image-size" src="../../img/desktop-image.png"/>
+                <img class="desktop desktop-image-size" src="./img/figma-image-example.png"/>
             </div>
 
             <div class="first-article-desktop">
@@ -227,7 +227,7 @@
 
         <button class="button1">Try for Free</button>
         <div class="macbook">
-            <img class="macbookimage" src="../../img/macbook.png"/>
+            <img class="macbookimage" src="./img/macbook.png"/>
         </div>
     </div>
 </section>
@@ -373,7 +373,7 @@
                     <div class="partners-boxes">
                         <div>
                             <h4>Client Name</h4>
-                            <img class="desktop-partners-size" src="../../img/client2.png"/>
+                            <img class="desktop-partners-size" src="./img/android-logo.png"/>
                         </div>
 
                         <div>
@@ -425,7 +425,7 @@
                     <div class="partners-boxes">
                         <div>
                             <h4>Client Name</h4>
-                            <img class="desktop-partners-size" src="../../img/airbnb-image.png"/>
+                            <img class="desktop-partners-size" src="./img/airbnb.png"/>
                         </div>
 
                         <div>
@@ -441,7 +441,7 @@
                     <div class="partners-boxes">
                         <div>
                             <h4>Client Name</h4>
-                            <img class="desktop-partners-size" src="../../img/appstore-image.png"/>
+                            <img class="desktop-partners-size" src="./img/appstore.png"/>
                         </div>
 
 
@@ -517,7 +517,7 @@
             </div>
 
             <div class="row">
-                <img class="desktop-mini-image" src="../../img/avatar2.png"/>
+                <img class="desktop-mini-image" src="./img/person-logo.png"/>
                 <div>
                     <h3>Organize across</h3>
                     <span>Ui designer</span>
@@ -549,7 +549,7 @@
             </div>
 
             <div>
-                <img src="../../img/price1.png"/>
+                <img src="./img/price1.png"/>
             </div>
 
             <div>
@@ -564,7 +564,7 @@
             </div>
 
             <div>
-                <img src="../../img/price3white.png"/>
+                <img src="./img/price2.png"/>
             </div>
 
             <div>
@@ -581,7 +581,7 @@
 
 
         <div>
-            <img src="../../img/price2black.png"/>
+            <img src="./img/price2.png"/>
         </div>
 
         <div>
@@ -615,7 +615,7 @@
                 </div>
 
                 <div>
-                    <img src="../../img/price2black.png"/>
+                    <img src="./img/price2.png"/>
                 </div>
                 <div>
                     <button class="button16-blue">Order Now</button>
@@ -629,7 +629,7 @@
                 </div>
 
                 <div>
-                    <img src="../../img/price99.png"/>
+                    <img src="./img/price3.png"/>
                 </div>
 
                 <div>
