--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="desktop-column">
             <div class="feature-item">
                 <div class="tip">
-                    <img class="padright20" src="../../img/food.png"/>
+                    <img class="padright20" src='./img/feature-item1.png'/>
                     <h2 class="h2-features">The best products
                         start with Sketch</h2>
                 </div>
@@ -126,7 +126,7 @@
 
             <div class="feature-item">
                 <div class="tip">
-                    <img src="../../img/food.png"/>
+                    <img src="./img/feature-item2.png"/>
                     <h2 class="h2-features">Fastest way to organize</h2>
                 </div>
                 <div class="feature-text">
@@ -140,7 +140,7 @@
 
             <div class="feature-item ">
                 <div class="tip">
-                    <img src="../../img/food.png"/>
+                    <img src="./img/feature-item3.png"/>
                     <h2 class="h2-features">Work better <br> together</h2>
                 </div>
 
@@ -170,7 +170,7 @@
 
         <div class="feature-item">
             <div class="tip">
-                <img class="padright20" src="../../img/food.png"/>
+                <img class="padright20" src="./img/feature-item1.png"/>
                 <h2 class="h2-features">The best products
                     start with Sketch</h2>
             </div>
@@ -184,7 +184,7 @@
 
         <div class="feature-item">
             <div class="tip">
-                <img src="../../img/food.png"/>
+                <img src="./img/feature-item2.png"/>
                 <h2 class="h2-features">Fastest way to organize</h2>
             </div>
             <div class="feature-text">
@@ -198,7 +198,7 @@
 
         <div class="feature-item ">
             <div class="tip">
-                <img src="../../img/food.png"/>
+                <img src="./img/feature-item3.png"/>
                 <h2 class="h2-features">Work better together</h2>
             </div>
 
