--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <div class="client-name">
                     <h4>Client Name</h4>
                 </div>
-                <img class="img-client-logo" src="../../img/client2.png"/>
+                <img class="img-client-logo" src="./img/airbnb.png"/>
 
                 <div class="client-text">
         <span>Slate helps you see how
@@ -329,7 +329,7 @@
                 <div class="client-name">
                     <h4>Client Name</h4>
                 </div>
-                <img class="img-client-logo" src="../../img/client3.png"/>
+                <img class="img-client-logo" src="./img/client3.png"/>
                 <div class="client-text">
                     <span>Slate helps you see how
         many more days you need
@@ -564,7 +564,7 @@
             </div>
 
             <div>
-                <img src="./img/price2.png"/>
+                <img src="./img/white-price-mobile.png"/>
             </div>
 
             <div>
@@ -599,7 +599,7 @@
                 </div>
 
                 <div>
-                    <img src="../../img/price1.png"/>
+                    <img src="./img/price1.png"/>
                 </div>
 
                 <div>
@@ -653,15 +653,15 @@
 
         <div class="contacts mobile">
             <div class="logos">
-                <img class="twitter-img" src="../../img/twitter.png"/>
-                <img class="social-img" src="../../img/facebook.png"/>
-                <img class="social-img" src="../../img/in.png"/>
+                <img class="twitter-img" src="./img/twitter.png"/>
+                <img class="social-img" src="./img/facebook.png"/>
+                <img class="social-img" src="./img/in.png"/>
             </div>
 
             <div class="contacts-mobile">
                 <div class="contact-info">
                     <div class="img-contact-position">
-                        <img class="geo-img" src="../../img/geolocation.png"/>
+                        <img class="geo-img" src="./img/geolocation.png"/>
                     </div>
 
                     <div>
@@ -673,7 +673,7 @@
 
                 <div class="contact-info">
                     <div class="img-contact-position">
-                        <img class="phone-img" src="../../img/phone.png"/>
+                        <img class="phone-img" src="./img/phone.png"/>
                     </div>
 
                     <div class="contact-number-position">
@@ -683,7 +683,7 @@
 
                 <div class="contact-info">
                     <div class="img-contact-position">
-                        <img class="mail-img" src="../../img/mail.png"/>
+                        <img class="mail-img" src="./img/mail.png"/>
                     </div>
 
                     <div>
@@ -748,7 +748,7 @@
                     <div>
                         <div class="contact-info">
                             <div class="geo-img-position">
-                                <img class="geo-img" src="../../img/geolocation.png"/>
+                                <img class="geo-img" src="./img/geolocation.png"/>
                             </div>
 
                             <div>
@@ -759,7 +759,7 @@
 
                         <div class="contact-info">
                             <div>
-                                <img class="phone-img" src="../../img/phone.png"/>
+                                <img class="phone-img" src="./img/phone.png"/>
                             </div>
 
                             <div>
@@ -769,7 +769,7 @@
 
                         <div class="contact-info">
                             <div>
-                                <img class="mail-img" src="../../img/mail.png"/>
+                                <img class="mail-img" src="./img/mail.png"/>
                             </div>
 
                             <div>
@@ -778,9 +778,9 @@
                         </div>
 
                         <div class="contact-links">
-                            <img class="big-logo" src="../../img/twitter.png"/>
-                            <img class="big-logo" src="../../img/facebook.png"/>
-                            <img class="big-logo" src="../../img/in.png"/>
+                            <img class="big-logo" src="./img/twitter.png"/>
+                            <img class="big-logo" src="./img/facebook.png"/>
+                            <img class="big-logo" src="./img/in.png"/>
                         </div>
                     </div>
 
@@ -805,14 +805,14 @@
             </div>
 
             <div class="map-position">
-                <img class="map-size" src="../../img/map.png">
+                <img class="map-size" src="./img/map.png">
             </div>
 
             <footer class="mobile">
                 <div>
                     <div class="contact-info">
                         <div class="img-contact-position">
-                            <img class="geo-img" src="../../img/geolocation.png"/>
+                            <img class="geo-img" src="./img/geolocation.png"/>
                         </div>
 
                         <div>
@@ -824,7 +824,7 @@
 
                     <div class="contact-info">
                         <div class="img-contact-position">
-                            <img class="phone-img" src="../../img/phone.png"/>
+                            <img class="phone-img" src="./img/phone.png"/>
                         </div>
 
                         <div>
@@ -834,7 +834,7 @@
 
                     <div class="contact-info">
                         <div class="img-contact-position">
-                            <img class="mail-img" src="../../img/mail.png"/>
+                            <img class="mail-img" src="./img/mail.png"/>
                         </div>
 
                         <div>
@@ -844,15 +844,15 @@
 
                     <div class="footer-logos">
                         <div>
-                            <img class="twitter-img" src="../../img/twitter.png"/>
+                            <img class="twitter-img" src="./img/twitter.png"/>
                         </div>
 
                         <div>
-                            <img class="social-img" src="../../img/facebook.png"/>
+                            <img class="social-img" src="./img/facebook.png"/>
                         </div>
 
                         <div>
-                            <img class="social-img" src="../../img/in.png"/>
+                            <img class="social-img" src="./img/in.png"/>
                         </div>
                     </div>
                 </div>
@@ -894,7 +894,7 @@
                 <div class="column">
                     <div class="desktop-contact">
                         <div>
-                            <img class="geo-img" src="../../img/geolocation.png"/>
+                            <img class="geo-img" src="./img/geolocation.png"/>
                         </div>
 
                         <div>
@@ -906,7 +906,7 @@
 
                     <div class="desktop-contact">
                         <div>
-                            <img class="phone-img" src="../../img/phone.png"/>
+                            <img class="phone-img" src="./img/phone.png"/>
                         </div>
                         <div>
                             <span>(843) 555-0130</span>
@@ -915,7 +915,7 @@
 
                     <div class="desktop-contact">
                         <div>
-                            <img class="mail-img" src="../../img/mail.png"/>
+                            <img class="mail-img" src="./img/mail.png"/>
                         </div>
 
                         <div>
@@ -926,15 +926,15 @@
 
                     <div class="social-links">
                         <div>
-                            <img class="big-logo" src="../../img/twitter.png"/>
+                            <img class="big-logo" src="./img/twitter.png"/>
                         </div>
 
                         <div>
-                            <img class="big-logo" src="../../img/facebook.png"/>
+                            <img class="big-logo" src="./img/facebook.png"/>
                         </div>
 
                         <div>
-                            <img class="big-logo" src="../../img/in.png"/>
+                            <img class="big-logo" src="./img/in.png"/>
                         </div>
                     </div>
 
