--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
 
                 <div>
-                    <img class="img-client-logo" src="../../img/client1.png"/>
+                    <img class="img-client-logo" src="./img/client1.png"/>
                 </div>
 
                 <div class="client-text">
@@ -356,7 +356,7 @@
                     <div class="partners-boxes">
                         <div>
                             <h4>Client Name</h4>
-                            <img class="desktop-partners-size" src="../../img/client1.png"/>
+                            <img class="desktop-partners-size" src="./img/client1.png"/>
                         </div>
 
                         <div>
@@ -389,7 +389,7 @@
                     <div class="partners-boxes">
                         <div>
                             <h4>Client Name</h4>
-                            <img class="desktop-partners-size" src="../../img/client3.png"/>
+                            <img class="desktop-partners-size" src="./img/client3.png"/>
                         </div>
 
 
@@ -408,7 +408,7 @@
                     <div class="partners-boxes">
                         <div>
                             <h4>Client Name</h4>
-                            <img class="desktop-partners-size" src="../../img/client3.png"/>
+                            <img class="desktop-partners-size" src="./img/client3.png"/>
                         </div>
 
                         <div>
@@ -479,7 +479,7 @@
             </div>
 
             <div>
-                <img class="dropbox-size" src="../../img/dropbox.png"/>
+                <img class="dropbox-size" src="./img/dropbox.png"/>
             </div>
 
             <div>
@@ -490,7 +490,7 @@
 
 
             <div class="tip">
-                <img class="avatar-img" src="../../img/avatar.png"/>
+                <img class="avatar-img" src="./img/avatar.png"/>
                 <div>
                     <h3>Organize across</h3>
                     <span>Ui designer</span>
@@ -507,7 +507,7 @@
             </div>
 
             <div>
-                <img class="dropbox-size" src="../../img/dropbox.png"/>
+                <img class="dropbox-size" src="./img/dropbox.png"/>
             </div>
 
             <div>
